--- a/app/src/main/res/layout/activity_surah_content.xml
+++ b/app/src/main/res/layout/activity_surah_content.xml
@@ -7,7 +7,7 @@
     tools:context=".SurahContent">
 
     <ListView
-        android:id="@+id/SurahContent"
+        android:id="@+id/surahlist"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
